# tilbakemeldingsapp

./: .gitignore  CHANGELOG.md  README.md  bump.sh  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
__tests__/: archive.test.ts  backup.test.ts  import-export.test.ts  observations.test.ts  scoring.test.ts  setup.ts  sync.test.ts  useGradingShortcuts.test.ts
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
components/: BackupPanel.tsx  ClassProgressChart.tsx  ClientLayout.tsx  CreateCourseModal.tsx  DarkModeToggle.tsx  ErrorBoundary.tsx  FeedbackForm.tsx  GradingProgressBar.tsx  ImportModal.tsx  LabelManager.tsx  LanguageSelector.tsx  Navbar.tsx  ObservationPanel.tsx  OralFeedbackForm.tsx  OralTestListPanel.tsx  PdfPreviewModal.tsx  ProgressGrid.tsx  ProjectFeedbackForm.tsx  ProjectListPanel.tsx  RadarChart.tsx  ScoringGuide.tsx  SnippetPicker.tsx  SnippetSidebar.tsx  StudentInfo.tsx  StudentRosterPanel.tsx  SyncStatusIndicator.tsx  TaskConfiguration.tsx  TaskSidebar.tsx  TaskStudentList.tsx  TestListPanel.tsx  TypstMathPreview.tsx
contexts/: LanguageContext.tsx  NotificationContext.tsx  PreferencesContext.tsx  SyncContext.tsx
data/: README.md  demoCourse.json
hooks/: useGradingShortcuts.ts
locales/: en.json  nb.json  nn.json
public/: site.webmanifest
src-tauri/: Cargo.toml  build-server.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
types/: index.ts
utils/: archive.ts  courseStorage.ts  criteriaTemplateStorage.ts  (+10 more)
(+21 files in other folders)
