[package]
name = "mattemonitor"
version = "0.9.0"
description = "Math grading and feedback tool for teachers"
authors = ["lektorodd"]
license = "MIT"
repository = "https://github.com/lektorodd/tilbakemeldingsapp"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
